Fixed new post creation test.

--- a/test/integration/behat.yml
+++ b/test/integration/behat.yml
@@ -5,6 +5,7 @@ default:
           sessions:
             default:
               symfony2: ~
+        TableNode\Extension\NestedTableNodeExtension: ~
     suites:
         default:
             contexts:
