--- a/src/RiftRunBundle/Resources/config/validation/Post.yml
+++ b/src/RiftRunBundle/Resources/config/validation/Post.yml
@@ -2,6 +2,8 @@ RiftRunBundle\Model\Post:
     properties:
         player:
             - NotBlank: ~
+            - NotNull: ~
         query:
             - NotBlank: ~
+            - NotNull: ~
 
