--- a/src/RiftRunBundle/Resources/config/validation/Grift.yml
+++ b/src/RiftRunBundle/Resources/config/validation/Grift.yml
@@ -3,3 +3,7 @@ RiftRunBundle\Model\Grift:
         level:
             - NotBlank: ~
             - NotNull: ~
+            - Type:
+                type: string
+            - Choice:
+                choices: ['10+', '20+', '40+', '50+', '60+', '70+', '0+']
