CharacterType validation and tests.

--- a/src/RiftRunBundle/Resources/config/validation/CharacterType.yml
+++ b/src/RiftRunBundle/Resources/config/validation/CharacterType.yml
@@ -3,3 +3,5 @@ RiftRunBundle\Model\CharacterType:
         type:
             - NotBlank: ~
             - NotNull: ~
+            - Choice:
+                choices: ["demon hunter", "barbarian", "wizard", "witch doctor", "monk"]
