Character choices validation.

--- a/src/RiftRunBundle/Resources/config/validation/Character.yml
+++ b/src/RiftRunBundle/Resources/config/validation/Character.yml
@@ -3,8 +3,8 @@ RiftRunBundle\Model\Character:
         type:
             - NotBlank: ~
             - NotNull: ~
-            - Type:
-                type: alpha
+            - Choice:
+                choices: ["demon hunter", "monk", "wizard", "witch doctor", "barbarian"]
         paragonPoints:
             - NotBlank: ~
             - NotNull: ~
