--- a/composer.json
+++ b/composer.json
@@ -49,7 +49,8 @@
         "hautelook/alice-bundle": "dev-master",
 	    "phpunit/phpunit-mock-objects": "2.0.x-dev",
         "behat/web-api-extension": "dev-master",
-	"ralfmaxxx/behat_multidimensional_extension": "dev-master"
+	    "ralfmaxxx/behat_multidimensional_extension": "dev-master",
+        "doctrine/doctrine-fixtures-bundle": "dev-master"
     },
     "scripts": {
         "post-root-package-install": [
