--- a/deployment/php/php-fpm.conf
+++ b/deployment/php/php-fpm.conf
@@ -118,5 +118,5 @@ error_log = /var/log/php7-fpm.log
 
 ; To configure the pools it is recommended to have one .conf file per
 ; pool in the following directory:
-include=/etc/php7/fpm/pool.d/*.conf
+include=/etc/php/7.0/fpm/pool.d/*.conf
 
