--- a/package.json
+++ b/package.json
@@ -17,6 +17,9 @@
   "license": "ISC",
   "devDependencies": {
     "gulp": "^3.9.0",
-    "gulp-typescript": "^2.9.0"
+    "gulp-sourcemaps": "^1.6.0",
+    "gulp-tslint": "^3.3.1",
+    "gulp-typescript": "^2.9.0",
+    "tslint": "^2.5.1"
   }
 }
