--- a/package.json
+++ b/package.json
@@ -21,5 +21,9 @@
     "gulp-tslint": "^3.3.1",
     "gulp-typescript": "^2.9.0",
     "tslint": "^2.5.1"
+  },
+  "dependencies": {
+    "angular2": "2.0.0-alpha.44",
+    "systemjs": "0.19.4"
   }
 }
