--- a/deployment/nginx/fa.conf
+++ b/deployment/nginx/fa.conf
@@ -54,4 +54,5 @@ server {
 
     # Include the basic h5bp config set
     include h5bp/basic.conf;
+    include h5bp/directive-only/cross-domain-insecure.conf;
 }
