--- a/deployment/nginx/riftrun.conf
+++ b/deployment/nginx/riftrun.conf
@@ -7,7 +7,6 @@ server {
     listen	 443 ssl;
 
     server_name riftrun.local;
-
     access_log  /dev/stdout;
     error_log   /var/log/nginx/rift-error.log;
     error_log  /dev/stdout warn;
@@ -53,4 +52,5 @@ server {
 
     # Include the basic h5bp config set
     include h5bp/basic.conf;
+    include h5bp/directive-only/cross-domain-insecure.conf;
 }
