--- a/deployment/php/Dockerfile
+++ b/deployment/php/Dockerfile
@@ -1,19 +1,29 @@
 # use the latest Ubuntu base image
-FROM ubuntu:latest
+FROM ubuntu:15.10
 
+RUN echo "CACHE BUST"
+RUN apt-get update
 RUN DEBIAN_FRONTEND=noninteractive apt-get -y dist-upgrade
 RUN DEBIAN_FRONTEND=noninteractive apt-get -y install software-properties-common
 RUN apt-get update
 RUN add-apt-repository ppa:ondrej/php-7.0 -y
 RUN apt-get update && DEBIAN_FRONTEND=noninteractive apt-get install -y 
 
-RUN DEBIAN_FRONTEND=noninteractive apt-get -y --force-yes install php-cli php php-fpm php-curl php-json php-mysql php-opcache php-pgsql php-sqlite3
+RUN DEBIAN_FRONTEND=noninteractive apt-get -y --force-yes install php-cli php php-fpm php-curl php-json php-mysql php-opcache php-pgsql php-sqlite3 php7.0-dev wget
 ADD php.ini /etc/php/7.0/fpm/
  
 ADD php-fpm.conf /etc/php/7.0/fpm/
 ADD www.conf  /etc/php/7.0/fpm/pool.d/
-
+ADD 20-xdebug.ini /etc/php/7.0/cli/conf.d/
+ADD 20-xdebug.ini /etc/php/7.0/fpm/conf.d/
 #RUN ln -s /etc/php7/conf.d/opcache.ini /etc/php7/cli/conf.d/opcache.ini
 #RUN ln -s /etc/php7/conf.d/opcache.ini /etc/php7/fpm/conf.d/opcache.ini
 
+RUN wget http://xdebug.org/files/xdebug-2.4.0beta1.tgz
+RUN tar xzvf xdebug-2.4.0beta1.tgz
+WORKDIR xdebug-2.4.0beta1
+RUN phpize
+RUN ./configure --prefix=/usr
+RUN make && make install
+WORKDIR /var/www/html/riftrun/
 CMD bash -c "/usr/sbin/php-fpm7.0 --fpm-config /etc/php/7.0/fpm/php-fpm.conf && tail -F /var/log/php7-fpm.log"
