--- a/deployment/php/20-xdebug.ini
+++ b/deployment/php/20-xdebug.ini
@@ -1,7 +1,10 @@
 zend_extension="xdebug.so"
 xdebug.remote_enable=on
-#xdebug.remote_host=127.0.0.1
-xdebug.remote_port=9000
-xdebug.remote_connect_back=On
-xdebug.remote_handler=dbgp
+xdebug.default_enable=1  
+xdebug.remote_enable=1  
+xdebug.remote_handler=dbgp  
+xdebug.remote_host=172.17.42.1
+xdebug.remote_port=9001  
+xdebug.remote_autostart=0  
+xdebug.remote_connect_back=1
 xdebug.profiler_enable=0
