--- a/.gitignore
+++ b/.gitignore
@@ -15,6 +15,8 @@ fa/components/**/*.js
 fa/components/**/*.map
 fa/services/**/*.js
 fa/services/**/*.map
+fa/models/**/*.js
+fa/models/**/*.map
 fa/*.map
 *.log
 fa/components/*.js
