--- a/src/RiftRunBundle/Resources/config/validation/Grift.yml
+++ b/src/RiftRunBundle/Resources/config/validation/Grift.yml
@@ -1,9 +1,9 @@
-#RiftRunBundle\Model\Grift:
-#    properties:
-#        level:
-#            - NotBlank: ~
-#            - NotNull: ~
-#            - Type:
-#                type: string
-#            - Choice:
-#                choices: ['10+', '20+', '40+', '50+', '60+', '70+', '0+']
+RiftRunBundle\Model\Grift:
+    properties:
+        level:
+            - NotBlank: ~
+            - NotNull: ~
+            - Type:
+                type: string
+            - Choice:
+                choices: ['10+', '20+', '40+', '50+', '60+', '70+', '0+']
