--- a/src/RiftRunBundle/Resources/config/validation/Post.yml
+++ b/src/RiftRunBundle/Resources/config/validation/Post.yml
@@ -1,13 +1,13 @@
-#RiftRunBundle\Model\Post:
-#    properties:
-#        player:
-#            - NotBlank: ~
-#            - NotNull: ~
-#            - Type:
-#                type: object
-#        query:
-#            - NotBlank: ~
-#            - NotNull: ~
-#            - Type:
-#                type: object
-#
+RiftRunBundle\Model\Post:
+    properties:
+        player:
+            - NotBlank: ~
+            - NotNull: ~
+            - Type:
+                type: object
+        query:
+            - NotBlank: ~
+            - NotNull: ~
+            - Type:
+                type: object
+
