--- a/fa/tsconfig.json
+++ b/fa/tsconfig.json
@@ -2,12 +2,15 @@
     "version": "1.5.0",
     "compilerOptions": {
         "target": "es5",
-        "module": "commonjs",
-        "declaration": false,
+        "module": "system",
+	"moduleResolution": "node",
         "noImplicitAny": false,
-        "removeComments": true,
-        "noLib": false,
+        "removeComments": false,
         "emitDecoratorMetadata": true,
-        "experimentalDecorators": true
-    }
+        "experimentalDecorators": true,
+	"sourceMap": true
+    },
+    "exclude": [
+	"node_modules"
+    ]
 }
