Fixed get service.

--- a/.gitignore
+++ b/.gitignore
@@ -7,17 +7,19 @@ database
 web/bundles
 .tags*
 .idea
-node_modules
+fa/node_modules
 typings
-fa/*.js
-fa/**/.js
-fa/components/**/*.js
-fa/components/**/*.map
-fa/services/**/*.js
-fa/services/**/*.map
-fa/models/**/*.js
-fa/models/**/*.map
-fa/*.map
+fa/app/*.js
+fa/app/**/.js
+fa/app/components/**/*.js
+fa/app/components/**/*.map
+fa/app/services/**/*.js
+fa/app/services/**/*.map
+fa/app/models/**/*.js
+fa/app/models/**/*.map
+fa/app/*.map
+fa/app/directives/**/*.js
+fa/app/directives/**/*.map
 *.log
-fa/components/*.js
+fa/app/components/*.js
 fa/bower_components
