--- a/fa/bower.json
+++ b/fa/bower.json
@@ -12,6 +12,7 @@
     "tests"
   ],
   "dependencies": {
-    "bootstrap": "4.0.0-alpha"
+    "bootstrap": "4.0.0-alpha",
+    "tether": "~1.1.1"
   }
 }
