First post working via angular.

--- a/deployment/nginx/riftrun.conf
+++ b/deployment/nginx/riftrun.conf
@@ -14,6 +14,8 @@ server {
     root   /var/www/html/riftrun/web;
 
     location / {
+        add_header "Access-Control-Allow-Method" "POST, GET, DELETE, PUT, OPTIONS";
+        add_header "Access-Control-Allow-Headers" "Origin, X-Requested-With, Content-Type, Accept, Key";
 	try_files $uri /app_dev.php$is_args$args;
     }
 
@@ -52,5 +54,5 @@ server {
 
     # Include the basic h5bp config set
     include h5bp/basic.conf;
-    include h5bp/directive-only/cross-domain-insecure.conf;
+#    include h5bp/directive-only/cross-domain-insecure.conf;
 }
