--- a/deployment/nginx/riftrun.conf
+++ b/deployment/nginx/riftrun.conf
@@ -15,7 +15,7 @@ server {
 
     location / {
         add_header "Access-Control-Allow-Method" "POST, GET, DELETE, PUT, OPTIONS";
-        add_header "Access-Control-Allow-Headers" "Origin, X-Requested-With, Content-Type, Accept, Key";
+        add_header "Access-Control-Allow-Headers" "Origin, Access-Control-Allow-Origin, Key, X-Access-Control-Allow-Origin, Content-Type, Access-Control-Allow-Headers, Authorization, X-Requested-With";
 	try_files $uri /app_dev.php$is_args$args;
     }
 
@@ -24,6 +24,7 @@ server {
 
     #location @app {
     location ~ ^/(app_dev|config)\.php(/|$) {
+	add_header "Access-Control-Allow-Headers" "Origin, Access-Control-Allow-Origin, Key, X-Access-Control-Allow-Origin, Content-Type, Access-Control-Allow-Headers, Authorization, X-Requested-With";
         include fastcgi_params;
         fastcgi_pass    phpfpm:9000;
         fastcgi_split_path_info ^(.+\.php)(/.*)$;
