--- a/app/config/config.yml
+++ b/app/config/config.yml
@@ -21,7 +21,6 @@ framework:
     validation:
         enabled: true
         enable_annotations: false
-        api: 2.5
     #serializer:      { enable_annotations: true }
     templating:
         engines: ['twig']
@@ -39,19 +38,6 @@ framework:
 twig:
     debug:            "%kernel.debug%"
     strict_variables: "%kernel.debug%"
-
-# Assetic Configuration
-assetic:
-    debug:          "%kernel.debug%"
-    use_controller: false
-    bundles:        [ ]
-    #java: /usr/bin/java
-    filters:
-        cssrewrite: ~
-        #closure:
-        #    jar: "%kernel.root_dir%/Resources/java/compiler.jar"
-        #yui_css:
-        #    jar: "%kernel.root_dir%/Resources/java/yuicompressor-2.4.7.jar"
 
 # Doctrine Configuration
 doctrine:
@@ -73,7 +59,7 @@ doctrine:
                     RiftRunBundle:
                         type: "yml"
                         dir: "%kernel.root_dir%/../src/RiftRunBundle/Resources/config/doctrine/riftrun"
-                        prefix: "RiftRunBundle\Model"
+                        prefix: "RiftRunBundle\\Model"
                         alias: "RiftRunners"
                     Translatable:
                         type: annotation
@@ -111,7 +97,7 @@ jms_serializer:
         auto_detection: true
         directories:
             RiftRunBundle:
-                namespace_prefix: "RiftRunBundle\Model"
+                namespace_prefix: "RiftRunBundle\\Model"
                 path: "@RiftRunBundle/Resources/config/serializer/"
 
 bazinga_hateoas:
