--- a/src/RiftRunBundle/Resources/config/validation/Post.yml
+++ b/src/RiftRunBundle/Resources/config/validation/Post.yml
@@ -5,9 +5,9 @@ RiftRunBundle\Model\Post:
             - NotNull: ~
             - Type:
                 type: object
-#        query:
-#            - NotBlank: ~
-#            - NotNull: ~
-#            - Type:
-#                type: object
+        query:
+            - NotBlank: ~
+            - NotNull: ~
+            - Type:
+                type: object
 
